--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Klotin_notes"
         tools:targetApi="31">
         <activity
+            android:name=".simpleCalculator.converterApp"
+            android:exported="false" />
+        <activity
+            android:name=".simpleCalculator.spinnerCalculator"
+            android:exported="false" />
+        <activity
             android:name=".simpleCalculator.calculator2App"
             android:exported="false" />
         <activity
